force-app/main/default/objects/gmpkg__xUser_Calendar__c/gmpkg__xUser_Calendar__c.object-meta.xml
<CustomObject>
    <label>GM - User Calendar</label>
    <nameField>
        <label>Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GM - User Calendars</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>