force-app/main/default/objects/gmpkg__xUser_Calendar__c/fields/gmpkg__Comments__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>