force-app/main/default/objects/gmpkg__xUser_Calendar__c/fields/gmpkg__Config__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Config__c</fullName>
    <description>Activity Configurations</description>
    <label>Activity Config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>