force-app/main/default/objects/gmpkg__xUser_Calendar__c/fields/gmpkg__Custom_Icon__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Custom_Icon__c</fullName>
    <defaultValue>&quot;standard:event&quot;</defaultValue>
    <description>Calendar Icon</description>
    <label>Custom Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>