force-app/main/default/objects/gmpkg__xUser_Calendar__c/fields/gmpkg__Default_View__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Default_View__c</fullName>
    <defaultValue>&quot;weekly&quot;</defaultValue>
    <description>Default view</description>
    <label>Default View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>