force-app/main/default/objects/gmpkg__xUser_Calendar__c/validationRules/gmpkg__Name_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>gmpkg__Name_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorMessage>Name is required</errorMessage>
</ValidationRule>