force-app/main/default/objects/gmpkg__xUser_Calendar__c/listViews/gmpkg__All.listView-meta.xml
<ListView>
    <fullName>gmpkg__All</fullName>
    <columns>NAME</columns>
    <columns>gmpkg__Developer_Name__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>